library/general/restrict-hpa-minreplicas/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8shpaminreplicalimit
spec:
  crd:
    spec:
      names:
        kind: K8sHPAMinReplicaLimit
      validation:
        openAPIV3Schema:
          properties:
            max:
              type: integer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8shpaminreplicalimit

        violation[{"msg": msg}] {
          input.review.kind.kind == "HorizontalPodAutoscaler"
          minreplicas := input.review.object.spec.minReplicas
          minreplicas < 2
          msg := sprintf("HPA minReplicas (%v) is below the allowed minimum of 2.", [minreplicas])
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "HorizontalPodAutoscaler"
          minreplicas := input.review.object.spec.minReplicas
          minreplicas > input.parameters.max
          msg := sprintf("HPA minReplicas (%v) exceeds the allowed maximum of %v.", [minreplicas, input.parameters.max])
        }
